fixed spacing errors

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -41,9 +41,3 @@ section {
 .txtOrange {
     color: orange;
 }
-
-.center {
-    position: absolute;
-    top: .5;
-    transform: translate(0,-.5);
-}
